--- a/metrics.ini
+++ b/metrics.ini
@@ -81,7 +81,7 @@ Fallback="ScreenAttract"
 PrevScreen="ScreenHowToPlay"
 NextScreen="ScreenDemonstration"
 PlayMusic=true
-TimerSeconds=18
+TimerSeconds=20
 TimerStealth=true
 ForceTimer=true
 AllowStartToSkip=true
@@ -203,11 +203,8 @@ LineThemePref="gamecommand;screen,ScreenOptionsTheme;name,THEME OPTIONS"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsHome"
 PrevScreen="ScreenOptionsHome"
-LineNames="BOOT,SONGOPT,COMBOU,HDEFNS"
-LineBOOT="lua,ThemePrefRow('BOOT')"
-LineSONGOPT="lua,ThemePrefRow('SONGOPT')"
-LineCOMBOU="lua,ThemePrefRow('COMBOU')"
-LineHDEFNS="lua,ThemePrefRow('HDEFNS')"
+LineNames="EnableCodes"
+LineEnableCodes="lua,ThemePrefRow('EnableCodes')"
 
 [ScreenOptionsSM]
 Class="ScreenOptionsMaster"
@@ -221,7 +218,7 @@ RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) 
 
 NextScreen=Branch.AfterInit()
 PrevScreen=Branch.AfterInit()
-LineNames="GameType,GraphicSound,KeyConfig,Arcade,InputOptions,SoundGraphics,Profiles,Network,Advanced,Reload,Credits,Exit"
+LineNames="GameType,GraphicSound,KeyConfig,Arcade,InputOptions,SoundGraphics,Profiles,Network,Advanced,Reload,Credits,ThemePref,Exit"
 
 LineSync="gamecommand;screen,ScreenGameplaySyncMachine;name,Calibrate Machine Sync"
 LineGameType="gamecommand;screen,ScreenSelectGame;name,Select Game"
@@ -242,6 +239,7 @@ LineMoreOptions="gamecommand;screen,ScreenOptionsExtended;name,More Options"
 LineCredits="gamecommand;screen,ScreenCredits;name,StepMania Credits"
 LineSoundGraphics="gamecommand;screen,ScreenOptionsDisplaySub;name,Display Options"
 LineInputOptions="gamecommand;screen,ScreenOptionsInputSub;name,InputOptions"
+LineThemePref="gamecommand;screen,ScreenOptionsTheme;name,Theme Options"
 LineExit="gamecommand;screen,ScreenInit;name,EXIT"
 
 [ScreenOptionsService]
@@ -270,20 +268,23 @@ ShowExitRow=false
 RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:y(SCREEN_CENTER_Y-185+(16*offsetFromCenter)); self:x(SCREEN_CENTER_X-138); end
 
 [ScreenSelectPlayMode]
-Class="ScreenSelectMaster"
-Fallback="ScreenSelectMaster"
-NextScreen="ScreenSelectMusic"
-PrevScreen="ScreenLogo"
-WaitForChildrenBeforeTweeningOut=true
-TimerSeconds=15
 ShowScroller=false
+WrapScroller=false
+ShowIcon=true
+TimerSeconds=15
 
-ChoiceNames="1,2,3,4"
-DefaultChoice="1"
-Choice1="name,TopLeft;screen,ScreenSelectMusic"
-Choice2="name,TopRight;screen,ScreenSelectMusic"
-Choice3="name,BotLeft;screen,ScreenSelectMusic"
-Choice4="name,BotRight;screen,ScreenSelectMusic"
+ChoiceNames="Easy,Norm,Hard"
+DefaultChoice="Norm"
+ChoiceEasy="playmode,regular;screen,ScreenSelectMusic"
+ChoiceNorm="playmode,regular;screen,ScreenSelectMusic"
+ChoiceHard="playmode,regular;screen,ScreenSelectMusic"
+
+OptionOrderUp="4:4"
+OptionOrderDown="4:4"
+
+CodeNames="Harder,Easier"
+CodeHarder="Down,Down"
+CodeEasier="Up,Up"
 
 [OptionRowAC]
 Fallback="OptionRow"
@@ -551,7 +552,12 @@ DancePointsP1OnCommand=diffusealpha,0
 DancePointsP2OnCommand=diffusealpha,0
 
 [MenuTimer]
-WarningBeepStart=5
+WarningBeepStart=0
+Warning4Command=diffuseshift;effectperiod,.1;effectcolor1,Color.White;effectcolor2,Color.Red;
+Warning3Command=diffuseshift;effectperiod,.1;effectcolor1,Color.White;effectcolor2,Color.Red;
+Warning2Command=diffuseshift;effectperiod,.1;effectcolor1,Color.White;effectcolor2,Color.Red;
+Warning1Command=diffuseshift;effectperiod,.1;effectcolor1,Color.White;effectcolor2,Color.Red;
+Warning0Command=diffuseshift;effectperiod,.1;effectcolor1,Color.White;effectcolor2,Color.Red;
 
 [MenuTimerWithoutHurryUp]
 Fallback="MenuTimer"
@@ -561,6 +567,10 @@ HurryUpTransition=-1
 [ScreenWithMenuElements]
 TimerX=SCREEN_CENTER_X+236
 TimerY=SCREEN_CENTER_Y+152
+TimerOnCommand=shadowlength,5
+
+[ScreenStageInformation]
+TimerSeconds=2
 
 [ScreenGameplay]
 StartGivesUp=false
@@ -580,6 +590,48 @@ ScoreP2Y=SCREEN_BOTTOM-49
 ScoreP2OnCommand=draworder,1
 ScoreP2OffCommand=
 
+[ScreenEvaluation]
+TimerSeconds=20
+TimerStealth=true
+
+[CodeDetector]
+PrevSteps1=GetDDRCode("PrevSteps1")
+PrevSteps2=GetDDRCode("PrevSteps2")
+NextSteps1=GetDDRCode("NextSteps1")
+NextSteps2=GetDDRCode("NextSteps2")
+NextSort1=GetDDRCode("NextSort1")
+NextSort2=GetDDRCode("NextSort2")
+NextSort3=GetDDRCode("NextSort3")
+NextSort4=GetDDRCode("NextSort4")
+ModeMenu1=GetDDRCode("ModeMenu1")
+ModeMenu2=GetDDRCode("ModeMenu2")
+Mirror="Left,Right,Left,Right,Left,Right,Left,Right"
+Left="Left,Left,Left,Left,Left,Left,Left,Left"
+Right="Right,Right,Right,Right,Right,Right,Right,Right"
+Shuffle="Up,Down,Left,Right,Down,Up,Right,Left"
+SuperShuffle=
+NextTransform=
+NextScrollSpeed=
+PreviousScrollSpeed=
+NextAccel=
+NextEffect=
+NextAppearance=
+NextTurn=
+Reverse=
+HoldNotes=
+Mines=
+Dark="Up,Down,Up,Down,Up,Down,Up,Down"
+Little="Left,Down,Right,Down,Left,Down,Right,Down,Up"
+CancelAll="Up,Up,Up,Up"
+NextGroup=GetDDRCode("NextGroup")
+PrevGroup=GetDDRCode("PrevGroup")
+CloseCurrentFolder=GetDDRCode("CloseCurrentFolder")
+Hidden=
+RandomVanish=
+SaveScreenshot1=GetDDRCode("SaveScreenshot1")
+SaveScreenshot2=GetDDRCode("SaveScreenshot2")
+CancelAllPlayerOptions=GetDDRCode("CancelAllPlayerOptions")
+
 [ScreenSelectMusic]
 TimerSeconds=60
 BannerOnCommand=diffusealpha,0
@@ -591,9 +643,137 @@ MusicWheelOnCommand=%function(self,param) \
 	else \
 		self:draworder(-1) \
 		self:zoom(.536) \
-		self:fov(75); \
+		self:fov(65); \
 		self:rotationx(-60); \
 		self:x(SCREEN_CENTER_X) \
 		self:y(SCREEN_CENTER_Y-37) \
 	end \
 end
+MusicWheelOffCommand=linear,.5;zoom,8
+
+[ScreenOptionsMaster]
+#Speed Modifiers
+Speed="17;"
+SpeedDefault="mod,1x,no randomspeed"
+Speed,1="mod,0.25x;name,x0.25"
+Speed,2="mod,0.5x;name,x0.5"
+Speed,3="mod,1x;name,x1"
+Speed,4="mod,1.5x;name,x1.5"
+Speed,5="mod,2x;name,x2"
+Speed,6="mod,2.5x;name,x2.5"
+Speed,7="mod,3x;name,x3"
+Speed,8="mod,3.5x;name,x3.5"
+Speed,9="mod,4x;name,x4"
+Speed,10="mod,4.5x;name,x4.5"
+Speed,11="mod,5x;name,x5"
+Speed,12="mod,5.5x;name,x5.5"
+Speed,13="mod,6x;name,x6"
+Speed,14="mod,6.5x;name,x6.5"
+Speed,15="mod,7x;name,x7"
+Speed,16="mod,7.5x;name,x7.5"
+Speed,17="mod,8x;name,x8"
+
+#Boost
+Boost="2"
+BoostDefault="mod,no boost,no brake,no wave,no expand,no boomerang"
+Boost,1="name,Off"
+Boost,2="mod,boost;name,On"
+
+#Appearance
+Appearance="4"
+AppearanceDefault="mod,no hidden,no sudden,no stealth,no blink,no randomvanish"
+Appearance,1="name,Visible"
+Appearance,2="mod,hidden;name,Hidden"
+Appearance,3="mod,sudden;name,Sudden"
+Appearance,4="mod,stealth;name,Stealth"
+
+#Turn
+Turn="5"
+TurnDefault="mod,no turn"
+Turn,1="name,Off"
+Turn,2="mod,mirror;name,Mirror"
+Turn,3="mod,left;name,Left"
+Turn,4="mod,right;name,Right"
+Turn,5="mod,shuffle;name,Shuffle"
+
+#Dark
+Dark="2"
+DarkDefault="mod,no dark,no blind"
+Dark,1="name,Off"
+Dark,2="mod,dark;name,On"
+
+#Scroll
+Scroll="2"
+ScrollDefault="mod,no reverse,no split,no alternate,no cross"
+Scroll,1="name,Normal"
+Scroll,2="mod,reverse;name,Reverse"
+
+#Arrow vivid/note/flat/rainbow
+
+#Cut off/on
+Cut="2"
+CutDefault="mod,no little"
+Cut,1="name,Off"
+Cut,2="mod,little;name,On"
+
+#Freeze Arrow on/off
+Freeze="2"
+FreezeDefault="mod,no noholds,no planted,no twister,no nojumps,no nohands"
+Freeze,1="name,On"
+Freeze,2="mod,noholds;name,Off"
+
+#Jump on/off1/off2
+Jump="2"
+JumpDefault="mod,no nojumps"
+Jump,1="name,On"
+Jump,2="mod,nojumps;name,Off"
+
+#Screen Filter off/dark/darker/darkest
+Filter="4"
+FilterDefault="Off"
+Filter,1="mod,Off;name,Off"
+Filter,2="mod,Dark;name,Dark"
+Filter,3="mod,Darker;name,Darker"
+Filter,4="mod,Darkest;name,Darkest"
+
+#Additional options?
+
+[OptionTitles]
+Boost=Boost
+
+[ScreenPlayerOptions]
+TimerStealth=true
+ShowExplanations=false
+
+#LineNames="1,2,3,4,5,6,7,8,9,10,11,12,13,NoteSkin"
+LineNames="1,2,3,4,5,6,7,8,9,10,12,NoteSkin"
+Line1="list,Speed"
+Line2="list,Boost"
+Line3="list,Appearance"
+Line4="list,Turn"
+Line5="list,Dark"
+Line6="list,Scroll"
+Line7="list,Cut"
+Line8="list,Freeze"
+Line9="list,Jump"
+Line10="list,Steps"
+#Line11="lua,OptionRowSpecialArrow()"
+Line12="list,Characters"
+Line13="list,Filter"
+LineNoteSkin="list,NoteSkins"
+LineNoteSkin2="lua,CustomOptionRow('NoteSkin')"
+
+RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:y(SCREEN_CENTER_Y-146+30*offsetFromCenter+20) end
+
+[PlayerStageStats]
+NumGradeTiersUsed=8
+GradeTier01IsAllW2s=true
+GradeTier02IsAllW3s=true
+GradePercentTier01=1.000000 --SS
+GradePercentTier02=0.900000 --S
+GradePercentTier03=0.800000 --A
+GradePercentTier04=0.640000 --B
+GradePercentTier05=0.500000 --C
+GradePercentTier06=0.400000 --D
+GradePercentTier07=0.000000 --E
+GradePercentTier08=-99999.000000 --E
