--- a/metrics.ini
+++ b/metrics.ini
@@ -136,6 +136,63 @@ TimerStealth=true
 TimerSeconds=14
 AllowStartToSkip=true
 
+[ScreenThanksEasy]
+Class="ScreenAttract"
+Fallback="ScreenAttract"
+NextScreen="ScreenGameOver"
+PrevScreen="ScreenGameOver"
+TimerMetricsGroup="MenuTimerWithoutHurryUp"
+PlayMusic=true
+ForceTimer=true
+TimerStealth=true
+TimerSeconds=5.973
+AllowStartToSkip=true
+
+[ScreenThanksNormal]
+Class="ScreenAttract"
+Fallback="ScreenAttract"
+NextScreen="ScreenGameOver"
+PrevScreen="ScreenGameOver"
+TimerMetricsGroup="MenuTimerWithoutHurryUp"
+PlayMusic=true
+ForceTimer=true
+TimerStealth=true
+TimerSeconds=14.348
+AllowStartToSkip=true
+
+[ScreenEndingBest]
+Fallback="ScreenGameplay"
+NextScreen="ScreenGameOver"
+
+StartGivesUp=false
+BackGivesUp=false
+FailOnMissCombo=false
+SelectSkipsSong=false
+LifeP1OnCommand=diffusealpha,0
+LifeP2OnCommand=diffusealpha,0
+ScoreP1OnCommand=diffusealpha,0
+ScoreP2OnCommand=diffusealpha,0
+SecondaryScoreP1OnCommand=diffusealpha,0
+SecondaryScoreP2OnCommand=diffusealpha,0
+StepsDescriptionP1OnCommand=visible,false
+StepsDescriptionP2OnCommand=visible,false
+PlayerOptionsP1OnCommand=visible,false
+PlayerOptionsP2OnCommand=visible,false
+StepsDisplayP1OnCommand=visible,false
+StepsDisplayP2OnCommand=visible,false
+SongOptionsOnCommand=visible,false
+SongNumberP1OnCommand=visible,false
+SongNumberP2OnCommand=visible,false
+
+PlayerOptionsP1X=SCREEN_CENTER_X
+PlayerOptionsP1Y=SCREEN_BOTTOM-46
+PlayerOptionsP1OnCommand=draworder,200;zoom,0.5;addy,100;sleep,0.5;linear,1;addy,-100
+PlayerOptionsP1OffCommand=
+PlayerOptionsP2X=SCREEN_CENTER_X
+PlayerOptionsP2Y=SCREEN_BOTTOM-30
+PlayerOptionsP2OnCommand=draworder,200;zoom,0.5;addy,100;sleep,0.5;linear,1;addy,-100
+PlayerOptionsP2OffCommand=
+
 [ScreenStageInformation]
 TimerSeconds=2.266
 TimerStealth=true
