Update PlayMode Icon, Ready/Go fade translator and Judgment tweens

--- a/metrics.ini
+++ b/metrics.ini
@@ -539,6 +539,15 @@ Choice2="screen,ScreenOptionsService;text,NO"
 [Gameplay]
 ComboIsPerRow=true
 
+[Judgment]
+# Things the judgment does when you bang on it.
+JudgmentW1Command=shadowlength,0;xy,0,-20;diffusealpha,1;zoom,1.2;zoomy,2;linear,0.05;zoom,1;sleep,0.4;diffusealpha,0;glowblink;effectperiod,0.05;effectcolor1,color("1,1,1,0");effectcolor2,color("1,1,1,0.25")
+JudgmentW2Command=shadowlength,0;xy,0,-20;diffusealpha,1;zoom,1.2;zoomy,2;linear,0.05;zoom,1;sleep,0.4;diffusealpha,0;
+JudgmentW3Command=shadowlength,0;xy,0,-20;diffusealpha,1;zoom,1.2;zoomy,1.5;linear,0.05;zoom,1;sleep,0.4;diffusealpha,0;
+JudgmentW4Command=shadowlength,0;xy,0,-20;diffusealpha,1;zoom,1;sleep,0.4;diffusealpha,0;
+JudgmentW5Command=shadowlength,0;xy,0,-20;diffusealpha,1;zoom,1;bob;effectmagnitude,10,0,0;effectperiod,0.2;sleep,0.4;diffusealpha,0
+JudgmentMissCommand=shadowlength,0;x,0;;diffusealpha,1;zoom,1;y,-20;linear,0.8;y,20;sleep,0.8;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0
+
 [GameState]
 LockExtraStageSelection=false
 DefaultSort="Preferred"
@@ -646,6 +655,13 @@ ScoreP2X=SCREEN_CENTER_X+204
 ScoreP2Y=SCREEN_BOTTOM-49
 ScoreP2OnCommand=draworder,1
 ScoreP2OffCommand=
+
+PlayerP1OnePlayerOneSideX=SCREEN_CENTER_X-175
+PlayerP2OnePlayerOneSideX=SCREEN_CENTER_X+175
+PlayerP1TwoPlayersTwoSidesX=SCREEN_CENTER_X-175
+PlayerP2TwoPlayersTwoSidesX=SCREEN_CENTER_X+175
+PlayerP1OnePlayerBothSidesX=SCREEN_CENTER_X
+PlayerP2OnePlayerBothSidesX=SCREEN_CENTER_X
 
 [ScreenEvaluation]
 TimerSeconds=20
