Fix MenuTimer position on ScreenSelectPlayMode

--- a/metrics.ini
+++ b/metrics.ini
@@ -343,6 +343,9 @@ CodeNames="Harder,Easier"
 CodeHarder="Down,Down"
 CodeEasier="Up,Up"
 
+TimerX=SCREEN_CENTER_X+260
+TimerY=SCREEN_CENTER_Y+140
+
 [OptionRowAC]
 Fallback="OptionRow"
 ShowUnderlines=false
