Added some details for ending

--- a/metrics.ini
+++ b/metrics.ini
@@ -168,6 +168,7 @@ StartGivesUp=false
 BackGivesUp=false
 FailOnMissCombo=false
 SelectSkipsSong=false
+SecondsBetweenComments=99999
 LifeP1OnCommand=diffusealpha,0
 LifeP2OnCommand=diffusealpha,0
 ScoreP1OnCommand=diffusealpha,0
