Practice mode screen

--- a/metrics.ini
+++ b/metrics.ini
@@ -221,7 +221,7 @@ DefaultChoice="Arcade"
 ChoiceArcade="screen,ScreenSelectPlayMode;style,single;applydefaultoptions;text,ARCADE MODE"
 ChoiceEvent="screen,ScreenThemeTest;text,EVENT MODE"
 ChoiceEndless="screen,ScreenThemeTest;text,ENDLESS"
-ChoiceTraining="screen,ScreenThemeTest;text,TRAINING"
+ChoiceTraining="screen,ScreenPracticeMenu;text,TRAINING"
 ChoiceEdit="screen,ScreenThemeTest;text,EDIT"
 ChoiceNSOrder="screen,ScreenThemeTest;text,NON STOP ORDER"
 ChoiceNSRevo="applydefaultoptions;playmode,nonstop;style,single;screen,ScreenSelectCourse;setenv,sMode,Nonstop;text,NON STOP REVOLUTION"
@@ -231,6 +231,67 @@ ChoiceInfo="screen,ScreenThemeTest;text,INFORMATION"
 ChoiceBonus="screen,ScreenThemeTest;text,BONUS TRACK"
 ChoiceDisc="screen,ScreenDisc;text,DISC CHANGE"
 ChoiceQuit="screen,ScreenExit;text,QUIT GAME"
+
+[ScreenPracticeMenu]
+NextScreen="ScreenPractice"
+PrevScreen=Branch.TitleMenu()
+ExplanationX=SCREEN_CENTER_X
+ExplanationY=SCREEN_BOTTOM-28
+
+[PracticeMenu]
+Label1OnCommand=diffusealpha,0
+Label2OnCommand=diffusealpha,0
+Label3OnCommand=diffusealpha,0
+Label4OnCommand=diffusealpha,0
+Label5OnCommand=diffusealpha,0
+Label6OnCommand=diffusealpha,0
+Label7OnCommand=diffusealpha,0
+SongTextBannerOnCommand=diffusealpha,0
+
+StepsDisplayX=SCREEN_WIDTH*2
+StepsDisplayY=SCREEN_HEIGHT*2
+GroupBannerOnCommand=visible,false
+GroupBannerChangeCommand=visible,false
+SongBannerX=SCREEN_CENTER_X
+SongBannerY=SCREEN_CENTER_Y-60
+SongBannerOnCommand=draworder,90;scaletoclipped,384,110;diffuse,color("#808080FF")
+
+Arrows1X=SCREEN_CENTER_X-220
+Arrows2X=SCREEN_CENTER_X+220
+ArrowsEnabledCommand=
+ArrowsDisabledCommand=
+
+Row1Y=SCREEN_CENTER_Y-186
+Row2Y=SCREEN_CENTER_Y-61
+Row3Y=SCREEN_CENTER_Y+72
+Row4Y=SCREEN_CENTER_Y+72
+Row7Y=SCREEN_HEIGHT*2
+
+Value1X=SCREEN_CENTER_X
+Value1Y=SCREEN_CENTER_Y-185
+Value1OnCommand=maxwidth,199;zoom,0.9;diffuse,HSV(56,1,1)
+Value1GainFocusCommand=accelerate,0.125;zoom,0.9;diffuse,HSV(56,1,1)
+Value1LoseFocusCommand=stoptweening;accelerate,0.125;zoom,0.75;diffuse,HSV(56,1,0.75)
+
+Value2X=SCREEN_CENTER_X
+Value2OnCommand=draworder,101
+
+Value3X=SCREEN_CENTER_X
+Value3Y=SCREEN_CENTER_Y+62
+Value3OnCommand=draworder,101;zoom,0.75;diffuse,HSV(56,1,0.75);uppercase,true
+Value3GainFocusCommand=accelerate,0.125;zoom,0.9;diffuse,HSV(56,1,1)
+Value3LoseFocusCommand=stoptweening;accelerate,0.125;zoom,0.75;diffuse,HSV(56,1,0.75)
+
+Value4X=SCREEN_CENTER_X
+Value4Y=SCREEN_CENTER_Y+82
+Value4OnCommand=draworder,101;zoom,0.75;diffuse,HSV(56,1,0.75)
+Value4GainFocusCommand=accelerate,0.125;zoom,0.9;diffuse,HSV(56,1,1)
+Value4LoseFocusCommand=stoptweening;accelerate,0.125;zoom,0.75;diffuse,HSV(56,1,0.75)
+
+Value7X=SCREEN_CENTER_X
+Value7Y=SCREEN_CENTER_Y+155
+Value7GainFocusCommand=accelerate,0.125;zoom,0.9
+Value7LoseFocusCommand=stoptweening;accelerate,0.125;zoom,0.75
 
 [ScreenDisc]
 Class="ScreenAttract"
